replaced the teal with violet

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             --color-coral-bright: #FF6B6B;
             --color-yellow: #F4A261;
             --color-yellow-bright: #E9C46A;
-            --color-teal: #3fc0a0;
+            --color-teal: #823fc0;
             --color-sage: #7d7ebb;
             
             --font-heading: 'Montserrat', sans-serif;
