--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             
             --color-text-primary: #f5f1e8;
             --color-text-secondary: #e4e0d5;
-            --color-text-muted: #a03a33;
+            --color-text-muted: #a03333;
             
-            --color-coral: #E76F51;
-            --color-coral-bright: #FF6B6B;
-            --color-yellow: #F4A261;
+            --color-coral: #e75151;
+            --color-coral-bright: #ff6bc6;
+            --color-yellow: #876beb;
             --color-yellow-bright: #E9C46A;
             --color-teal: #823fc0;
             --color-sage: #7d7ebb;
