Updated content on the homepage

--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                     <p class="role">Internal Communication Specialist</p>
                     <p>Led strategic internal communications and events for employees across India in conjunction with Marketing & various product divisions.</p>
                     <ul>
-                        <li>Built internal communication programs that worked because they respected people’s time.</li>
+                        <li>Built internal communication programs that valued employees' time.</li>
                           <li>Reduced non-priority emails by 30% over 4 months</li>  
                         <li>Pioneered 10-minute podcast series for employees on tech and news</li>
                         <li>Managed town halls, executive visits, and Tech World '24 engagement</li>
@@ -602,10 +602,10 @@
                     <h3>Maersk</h3>
                     <p class="date-range">October 2020 – June 2022</p>
                     <p class="role">Senior Copywriter</p>
-                    <p>Created thought-leadership and social media frameworks for global logistics. Mentored copy team on long-form content and inclusive communication.</p>
+                    <p>Created thought-leadership and social media frameworks for global logistics. </p>
                     <ul>
                         <li>Developed brand style guidelines for Maersk and Sealand</li>
-                        <li>Led DEI advocacy for gender-neutral facilities and sensitivity training</li>
+                        <li>Mentored copy team on standardized, brand-personality-led communication, and long-form content.</li>
                         <li>Marketing copy for APAC, Africa, West & Central Asia regions</li>
                     </ul>
                 </div>
@@ -614,8 +614,8 @@
                     <h3>Byju's</h3>
                     <p class="date-range">June 2018 – September 2019</p>
                     <p class="role">Game Narrative Designer</p>
-                    <p>Turned 'educational content' into playable stories that made kids curious again.</p>
-                    <p>Designed educational game narratives for children aged 3-5 (Byju's Early Learn with Disney) and K-12 modules.</p>
+                    <p>Recontextualised 'educational content' as stories and games that made kids curious again</p>
+                    <p>Designed educational game narratives for children aged 3-5 (Byju's Early Learn in collaboration with Disney) that kept the IPs of The Walt Disney Company, and K-12 modules in mind.</p>
                 </div>
                 
                 <div class="work-card reveal">
