--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             --color-text-secondary: #e4e0d5;
             --color-text-muted: #cc4d4d;
             
-            --color-coral: #e75197;
-            --color-coral-bright: #ff6bc6;
+            --color-coral: #e75172;
+            --color-coral-bright: #ff6ba9;
             --color-yellow: #876beb;
             --color-yellow-bright: #E9C46A;
             --color-teal: #aa75db;
