--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             --color-text-muted: #cc4d4d;
             
             --color-coral: #e75172;
-            --color-coral-bright: #ff6ba9;
+            --color-coral-bright: #cc4d4d;
             --color-yellow: #876beb;
             --color-yellow-bright: #E9C46A;
             --color-teal: #aa75db;
