--- a/index.html
+++ b/index.html
@@ -610,8 +610,10 @@
                     <h3>Byju's</h3>
                     <p class="date-range">June 2018 – September 2019</p>
                     <p class="role">Game Narrative Designer</p>
-                    <p>Recontextualised 'educational content' as stories and games that made kids curious again</p>
-                    <p>Designed educational game narratives for children aged 3-5 (Byju's Early Learn with Disney) that kept the IPs of The Walt Disney Company, and K-12 modules intact.</p>
+                    <p>Recontextualised educational content as stories and games</p>
+                    <ul>
+                        <li>Designed educational games for children aged 3-5 (Byju's Early Learn with Disney) that were in line with K-12 modules.</li>
+                    </ul>
                 </div>
                 
                 <div class="work-card reveal">
